--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "astro": "astro"
   },
   "dependencies": {
-    "astro": "^5.17.1"
+    "@contentful/rich-text-html-renderer": "^17.1.6",
+    "astro": "^5.17.1",
+    "contentful": "^11.10.3"
   }
 }
